test android flickering fix with container div fix

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -194,6 +194,21 @@ img.branch{
     padding: 0;
 }
 
+ 
+        body {
+            /* Setting body margins to 0 to have proper positioning of #container div */
+            margin: 0;
+        }
+ 
+            /* #container div with absolute position and 100% width and height so it takes up whole window */
+        #container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+
+
 
 /* ThemeRoller generated (with modifications) */
 /* Swatches */
